<resources>
    <string name="app_name">WeatherApp</string>
    <string name="enter_city">Enter City</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="min_max_temp">Min-max Temp</string>
    <string name="pressure">Presure</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="log">Log</string>
    <string name="format_two_num">%.2f C</string>
    <string name="two_dotes">:\u0020</string>
    <string name="procents">%</string>
    <string name="temp">Temp:\u0020</string>
    <string name="pres">Presure:\u0020</string>
    <string name="hPA">\u0020hPa</string>
    <string name="space">\u0020</string>
    <string name="widget_name">weather</string>
    <string name="please">Please,</string>
    <string name="refresh">refresh</string>
    <string name="minsk">Minsk</string>
    <string name="some">Some</string>
    <string name="error">error</string>
</resources>
